# ChessCPP-SDL

./: CMakeLists.txt  README.md
cmake/modules/: FindSDL2_ttf.cmake
include/: Board.hpp  BoardManager.hpp  Game.hpp  Menu.hpp  Move.hpp  MoveHelper.hpp  Piece.hpp  RendererManager.hpp  SDL_Helper.hpp  VisualHelper.hpp
include/ai/: ai.h
include/pieces/: Pawn.hpp  Rook.hpp
src/: main.cpp
src/ai/: ai.cpp
src/game/: Board.cpp  Game.cpp  Menu.cpp  Move.cpp  Piece.cpp
src/game/enums/: ColorType.hpp  GameState.hpp  PieceType.hpp
src/utils/: MoveHelper.cpp  VisualHelper.cpp
